# tttplots

./: README.md  setup.cfg
.github/workflows/: deploy.yml  update.yml
examples/data/: series_0.csv  series_1.csv  series_10.csv  series_11.csv  series_12.csv  series_13.csv  series_14.csv  series_15.csv  series_16.csv  series_17.csv  series_18.csv  series_19.csv  series_2.csv  series_20.csv  series_21.csv  series_22.csv  series_23.csv  series_24.csv  series_25.csv  series_26.csv  series_27.csv  series_28.csv  series_29.csv  series_3.csv  series_30.csv  series_31.csv  series_32.csv  series_33.csv  series_34.csv  series_35.csv  series_36.csv  series_37.csv  series_38.csv  series_39.csv  series_4.csv  series_40.csv  series_41.csv  series_42.csv  series_43.csv  series_44.csv  (+60 more)
examples/data/A/: series_0.csv  series_1.csv  series_10.csv  series_11.csv  series_12.csv  series_13.csv  series_14.csv  series_15.csv  series_16.csv  series_17.csv  series_18.csv  series_19.csv  series_2.csv  series_20.csv  series_21.csv  series_22.csv  series_23.csv  series_24.csv  series_25.csv  series_26.csv  series_27.csv  series_28.csv  series_29.csv  series_3.csv  series_30.csv  series_31.csv  series_32.csv  series_33.csv  series_34.csv  series_35.csv  series_36.csv  series_37.csv  series_38.csv  series_39.csv  series_4.csv  series_40.csv  series_41.csv  series_42.csv  series_43.csv  series_44.csv  (+60 more)
examples/data/B/: series_0.csv  series_1.csv  series_10.csv  series_11.csv  series_12.csv  series_13.csv  series_14.csv  series_15.csv  (+92 more)
src/tttplots/: __init__.py  tttplots.py  version.py
(+2 files in other folders)
