[metadata]
name             = tttplots
version          = 0.1.2
description      = Time-to-target Plots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pedromxavier.github.io/tttplots
project_urls =
    Bug Tracker = https://github.com/pedromxavier/tttplots/issues
    Source = https://github.com/pedromxavier/tttplots
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
package_dir =
    =src
packages =
    tttplots
    tttplots.extract

install_requires =
    matplotlib   >=3.6.2
    scienceplots >=2.0.1
    numpy        >=1.24.1

python_requires = >=3.7, <4

[options.entry_points]
console_scripts =
    tttplots = tttplots:main

# [options.extras_require]
# dev =
#     pytest
#     pytest-cov
#     twine
#     build